# LearnOpenGLES

./: .gitignore  README.md  gradle.properties  写给Android开发的OpenGL ES笔记 - 1.md  写给Android开发的OpenGL ES笔记 - 概念.md  写给Android开发的OpenGL-ES笔记 - 绘制三角形.md  写给Android开发的OpenGL-ES笔记 - 绘制矩形.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/learnopengles/: ActivityHelper.kt  CameraActivity.kt  CameraSurfaceView.kt  EGLHelper.kt  GLHelper.kt  GLUtils.kt  HellotriangleActivity.kt  Helper.kt  MainActivity.kt  MatrixActivity.kt  MatrixRender.kt  MatrixSurfaceView.kt  NDKEGLHelper.kt  SquareActivity.kt  SquareRender.kt  SquareSurfaceView.kt  TextureActivity.kt  TextureRender.kt  TextureSurfaceView.kt  TriangleRender.kt  TriangleSurfaceView.kt
app/src/main/res/layout/: activity_camera.xml  activity_hellotriangle.xml  activity_main.xml  activity_matrix.xml  activity_square.xml  activity_texture.xml
app/src/main/res/raw/: matrix_fragment_shader.glsl  matrix_vertex_shader.glsl  texture_vertex_shader.glsl  triangle_fragment_shader.glsl  triangle_vertex_shader.glsl
gradle/wrapper/: gradle-wrapper.properties
